--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,11 @@ header {
     transition: transform 0.3s ease-in-out;
 }
 
+header .img-logo-white-text {
+    cursor: pointer;
+  
+}
+
 header .nav-link {
     color: #343a40;
     transition: color 0.3s ease;
@@ -38,30 +43,48 @@ header .nav-link:hover {
 /* Forms */
 
 header #buscar-planta-form .form-control {
-    border-radius: 0.25rem; 
-    border-color: #ced4da; 
+    border-radius: 0.25rem;
+    border-color: #ced4da;
 }
+
 
 header #buscar-planta-form .form-control:focus {
-   
-    box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.25); 
+
+    box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.25);
 }
 
-
 header #buscar-planta-form .btn-light {
-    background-color: #f8f9fa; 
-    color: #495057; 
-    border: 1px solid #ced4da; 
+    background-color: #f8f9fa;
+    color: #495057;
+    border: 1px solid #ced4da;
     border-radius: 0.25rem;
-    transition: border-color 0.3s ease; 
+    transition: border-color 0.3s ease;
 }
 
 header #buscar-planta-form .btn-light:hover {
-    background-color: #e2e6ea; 
-    color: #343a40; 
-    border-color: #adb5bd; 
+    background-color: #e2e6ea;
+    color: #343a40;
+    border-color: #adb5bd;
 }
 
+header #buscar-planta-form .custom-btn {
+    border: 2px solid #ccd1d5;
+    padding: 0.5rem 1rem;
+    border-radius: 0.4rem;
+}
+
+header #buscar-planta-form .custom-btn .icon-lupa {
+    width: 26px;
+    height: 26px;
+    margin: 0;
+}
+
+
+header #buscar-planta-form .custom-btn:hover {
+    border: 2px solid #a4a8ab;
+    background-color: 0;
+    opacity: .9;
+}
 
 
 /* Main */
@@ -69,7 +92,6 @@ main .text-large {
     font-size: 40px;
     margin-top: 10vh;
 }
-
 
 /* Section Style */
 main #a-1 {
@@ -235,9 +257,10 @@ footer ul li a:hover {
         margin-top: 10px;
         flex-direction: column;
     }
-    
+
     header #buscar-planta-form .form-control {
-        margin-bottom: 10px; /* Espaçamento inferior no dispositivo móvel */
+        margin-bottom: 10px;
+        /* Espaçamento inferior no dispositivo móvel */
     }
 
     /* Overlay - Block */
